// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/DialogIntroductionText should not fail on empty value 1`] = `
<DialogIntroductionText
  emojiMap={
    EmojiMap {
      "customEmojis": Map {},
      "customEmojisArray": Array [],
    }
  }
  id="testblankvalue"
  value=""
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
    id="testblankvalue"
  />
</DialogIntroductionText>
`;

exports[`components/DialogIntroductionText should render message with supported values 1`] = `
<DialogIntroductionText
  emojiMap={
    EmojiMap {
      "customEmojis": Map {},
      "customEmojisArray": Array [],
    }
  }
  id="testsupported"
  value="**bold** *italic* [link](https://matterfoss.com/) <br/> [link target blank](!https://matterfoss.com/)"
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p><strong>bold</strong> <em>italic</em> <a class=\\"theme markdown__link\\" href=\\"https://matterfoss.com/\\" rel=\\"noreferrer\\" target=\\"_blank\\">link</a> &lt;br/&gt; <a class=\\"theme markdown__link\\" href=\\"!https://matterfoss.com/\\" rel=\\"noreferrer\\" target=\\"_blank\\">link target blank</a></p>",
      }
    }
    id="testsupported"
  />
</DialogIntroductionText>
`;
